# ambient-expense-agent

./: .gitignore  README.md
ambient-expense-agent/: .env.example  agents-cli-manifest.yaml  pyproject.toml
ambient-expense-agent/expense_agent/: agent.py  config.py  fast_api_app.py
ambient-expense-agent/tests/eval/: eval_config.yaml  generate_traces.py
ambient-expense-agent/tests/eval/datasets/: basic-dataset.json
ambient-expense-agent/tests/integration/: test_agent.py  test_server_e2e.py
submission-assets/: kaggle_writeup.md
submission_frontend/: index.html  main.py  pyproject.toml
